--- a/ms-back-end-api/pom.xml
+++ b/ms-back-end-api/pom.xml
@@ -42,6 +42,13 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- FINISH MYSQL DATABASE ENGINE DEPENDENCY -->
+		<!-- INIT ORACLE DATABASE ENGINE DEPENDENCY -->
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<!-- FINISH ORACLE DATABASE ENGINE DEPENDENCY -->		
 		<!-- INIT TESTING DEPENDENCY -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
