--- a/ms-back-end-api/src/main/resources/application.properties
+++ b/ms-back-end-api/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 server.address=0.0.0.0
 server.port=${PORT:9090}
 
-#
-spring.datasource.url=jdbc:mysql://localhost:3306/backend_api?useSSL=false
-spring.datasource.username=root
+# MySQL connection settings
+#spring.datasource.url=jdbc:mysql://localhost:3306/backend_api?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=1234567890
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+
+# OracleDB connection settings
+spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/xe
+spring.datasource.username=backend_api
 spring.datasource.password=1234567890
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
 spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
 
@@ -16,4 +23,4 @@ spring.jackson.locale=es_CL
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-engine=mysql
+engine=oracle
